--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,12 @@ javafx {
 
 dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+
+    implementation 'org.springframework:spring-websocket:6.1.2'
+    implementation 'org.springframework:spring-messaging:6.1.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
